# yt.flow

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
_bmad-output/: brainstorm-intent.md
_bmad-output/implementation-artifacts/: 1-1-langfuse-env-verification.md  1-10-resume-restart-trace-linkage.md  1-11-character-domain-reference-search.md  1-12-multi-angle-character-generation.md  1-13-video-llm-character-selection.md  1-2-project-scaffold-domain-types.md  1-3-prompt-hub-migration.md  1-4-langgraph-asyncsqlitesaver.md  1-5-scenario-node.md  1-6-image-node.md  1-6b-image-layered-assets.md  1-7-tts-node.md  1-8-subtitle-node.md  1-9-video-node.md  1-9b-video-effects-kenburns-transitions.md  1-9c-video-character-idle-motion.md  2-1-fastapi-sqlmodel-run-crud.md  2-2-sse-infrastructure.md  2-3-gate-mechanism.md  2-4-stage-control-retry-artifact-edit.md  2-5-data-access-scp-stage-artifacts.md  3-1-zinc-design-tokens-shadcn-tailwind.md  3-2-common-components.md  3-3-dashboard-scp-picker-dialog.md  3-4-run-detail-artifact-panel.md  3-5-gate-controls-retry-editor-sse.md  3-6-ab-comparison-accessibility.md  3-7-character-management-ui.md  4-1-ab-run-creation.md  4-2-evaluation-service.md  4-3-results-storage-api-winner.md  deferred-work.md  execution-plan.md  sprint-status.yaml
data/: scps.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  (+3 more)
scripts/: check_langfuse.py  migrate_prompts.py  seed_eval_prompts.py
tests/: test_config.py  test_prompt_migration.py  test_prompt_service.py
(+118 files in other folders)
