[project]
name = "yt-flow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=3.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
